Padronizando mensanges de elementos vazios

--- a/aplicacao/contest/src/main/resources/templates/evento/admin_lista_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_lista_ativos.html
@@ -35,9 +35,7 @@
         
         
 
-        <div class="col m4 s12" th:if="${false}">
-          <p>Não há eventos Ativos</p>
-        </div>
+        <h4 th:if="${false}">Não há eventos Ativos</h4>
 
 <!--         
         <div class="center">
