--- a/aplicacao/contest/src/main/resources/templates/evento/admin_lista_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_lista_inativos.html
@@ -75,9 +75,7 @@
          </div>
         </div>
         
-        <div class="col m4 s12" th:case="${false}">
-          <p>Não há eventos inativos</p>
-        </div>
+        <h4 th:if="${false}">Não há eventos Ativos</h4>
 
 <!--         
         <div class="center">
