--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
@@ -67,9 +67,7 @@
             </div>
         </div>
         
-        <div class="col m4 s12" th:if="${!existeEventos}">
-          <p>Não há eventos Inativos</p>
-        </div>
+          <h4 th:if="${!existeEventos}">Não há eventos Inativos</h4>
       </div>
         
 <!--         
