--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
@@ -36,13 +36,7 @@
 			</div>
 			<div class="row" th:switch="${#lists.isEmpty(trabalhos)}">
 				<div class="row" th:case="true">
-					<div class="card horizontal">
-						<div class="card-stacked">
-							<div class="card-content">
-								<span class="card-title">Nenhum artigo para revisar até o momento.</span>
-							</div>
-						</div>
-					</div>
+								<h4 class="card-title">Nenhum artigo para revisar até o momento.</h4>
 				</div>
 				<div class="row" th:case="false" th:each="trabalho : ${trabalhos}">
 					<div class="card horizontal">
