--- a/aplicacao/contest/src/main/resources/templates/fragments/listar_participacoes.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/listar_participacoes.html
@@ -5,15 +5,15 @@
 </head>
 <body>
     <div th:fragment="listar(label, participantes)">
-		<p><b th:text="${label}"></b></p>
+		<p th:unless="${#lists.isEmpty(participantes)}"><b th:text="${label}"></b></p>
 		<blockquote>
 			<p th:each="participante : ${participantes}" th:text="${participante.nome}">Nome de participante</p>
 		</blockquote>
 	</div>
 	
 	<div th:fragment="listar-clean(label, participantes)">
-		<p><b th:text="${label}"></b></p>
-			<p th:each="participante : ${participantes}" th:text="${participante.nome}">Nome de participante</p>
+		<p th:unless="${#lists.isEmpty(participantes)}"><b th:text="${label}"></b></p>
+		<p th:each="participante : ${participantes}" th:text="${participante.nome}">Nome de participante</p>
 	</div>
 </body>
 </html>
