--- a/aplicacao/contest/src/main/resources/templates/autor/autor_enviar_trabalho_form.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_enviar_trabalho_form.html
@@ -48,11 +48,11 @@
           
           <div id="coautores" class="coautores" th:each ="pessoa,count : ${trabalho.participacoes}" >
 	          <div class="input-field col m5 s5">
-	            <input id="nome_do_coautor" type="text" th:name="|participacoes[${count.index}].pessoa.nome|" th:value="${pessoa.getPessoa().getNome()}" />
+	            <input id="nome_do_coautor" readonly="readonly" type="text" th:name="|participacoes[${count.index}].pessoa.nome|" th:value="${pessoa.getPessoa().getNome()}" />
 	            <label for="nome_do_coautor">Autor</label>
 	          </div>
 	          <div class="input-field col m5 s5">
-	            <input id="email_do_coautor" type="text" th:name="|participacoes[${count.index}].pessoa.email|" th:value="${pessoa.getPessoa().getEmail()}" />
+	            <input id="email_do_coautor" readonly="readonly" type="text" th:name="|participacoes[${count.index}].pessoa.email|" th:value="${pessoa.getPessoa().getEmail()}" />
 	            <label for="email_do_coautor" >Email Autor</label>
 	          </div>
           </div>
