--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
@@ -45,7 +45,7 @@
           <div class="card">
               
             <div class="card-content"><span class="card-title" th:text="${eventoOrganizo.nome}"></span>
-              <div th:include="fragments/listar_participacoes :: listar('Organizador(es):', ${evento.organizadores})"></div>
+              <div th:include="fragments/listar_participacoes :: listar('Organizador(es):', ${eventoOrganizo.organizadores})"></div>
               <p th:text="|Visibilidade: ${eventoOrganizo.visibilidade.visibilidade}|"></p>
             </div>
             <div class="card-action">
@@ -80,7 +80,7 @@
                   </ul>
                 </div>
  -->
-      </div>
+   </div>
     <div th:include="fragments/footer :: footer"></div>
     <script type="text/javascript">
       $(document).ready(function(){
