Botao voltar adicionado

--- a/aplicacao/contest/src/main/resources/templates/fragments/admin_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/admin_menu_navegacao.html
@@ -9,6 +9,9 @@
 	        <a th:href="@{/evento/ativos}">Eventos Ativos</a>
 	        <a th:href="@{/evento/inativos}">Eventos Inativos</a>
 	        <a th:href="@{/evento/adicionar}">Adicionar Evento</a>
+	        <a class=" btn-large waves-effect waves-light purple right white-text"  onclick="window.history.back()" alt="VOLTAR" >
+	       		Voltar
+	       	</a>
 	    </div>
 	</div>
 </body>
