--- a/aplicacao/contest/src/main/resources/templates/fragments/autor_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/autor_menu_navegacao.html
@@ -8,6 +8,9 @@
 		<div class="row opcoes">
 			<a th:href="@{/autor/participarEvento}" class="ativo">Eventos Ativos</a>
 			<a th:href="@{/autor/meusTrabalhos}">Meus Eventos</a>
+			<a class=" btn-large waves-effect waves-light purple right white-text"  onclick="window.history.back()" alt="VOLTAR" >
+	       		Voltar
+	       	</a>
 		</div>
 	</div>
 </body>
