--- a/aplicacao/contest/src/main/resources/templates/fragments/evento_timeline.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/evento_timeline.html
@@ -33,7 +33,7 @@
 						<em>Começa o período de submissão dos artigos</em>
 					</li>
 					<li th:attr="data-date=${#calendars.format({evento.PrazoRevisaoInicial},'dd/MM/YYYY')}">
-						<em>Terminou o periodo de subissão, hora de começar as Revisões</em>
+						<em>Terminou o periodo de submissão, hora de começar as Revisões</em>
 					</li>
 		
 					<li th:attr="data-date=${#calendars.format({evento.PrazoRevisaoFinal},'dd/MM/YYYY')}">
