--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_avaliar_trabalho.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_avaliar_trabalho.html
@@ -13,9 +13,9 @@
   <body>
     <div th:include="fragments/header :: header"></div>
     <div class="container page"><br/>
-    <!-- 
-      <div class="row opcoes"><a th:href="@{/revisor/{id}/trabalhoRevisao(id=${trabalho.evento.id})}">Eventos Ativos</a></div>
-    -->
+     
+      <div class="row opcoes"><a th:href="@{/revisor/{id}/trabalhosRevisao(id=${trabalho.evento.id})}">Trabalhos para revisão</a></div>
+    
       <div class="row">
         <h1 th:text="${nomeEvento}"></h1>
         <div>
@@ -33,7 +33,7 @@
             	<div th:include="fragments/listar_participacoes :: listar('Autor(es):', ${trabalho.autoresDoTrabalho})"></div>
             </div>
             <div class="card-action">
-              <a id="baixar-trabalho" th:href="@{'/revisor/trabalho/' + ${trabalho.id}}" name="baixar-trabalho" class="btn waves-effect waves-light white-text">Fazer Download do Trabalho<i aria-hidden="true" class="fa fa-download left"></i></a>
+              <a id="baixar-trabalho" th:href="@{'/autor/file?path=' + ${trabalho.path}}" name="baixar-trabalho" class="btn waves-effect waves-light white-text">Fazer Download do Trabalho<i aria-hidden="true" class="fa fa-download left"></i></a>
             </div>
           </div>
         </div>
