- adicionado download trabalho para revisores na hora de atribuir revisores

--- a/aplicacao/contest/src/main/resources/static/css/style.css
+++ b/aplicacao/contest/src/main/resources/static/css/style.css
@@ -2,7 +2,9 @@ h1, h2, h3 {
   font-weight: lighter;
   color:#37474f ;
 }
-
+.card .card-content .card-title{
+	line-height: 28px;
+}
 .page{
   min-height: 650px;
 }
