--- a/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
@@ -25,13 +25,14 @@
         <div>
           <div class="col s12">
             <div class="col s4" th:each="trabalho,count : ${trabalhos}">
-	            <div class="card horizontal small">
+	            <div class="card horizontal small" th:classappend="${#lists.size(trabalho.revisores)} ? 'green white-text'">
 	              <div class="card-stacked">
 	                <div>
 	                	<div class="card-content">
 	                		<span class="card-title" th:text="${trabalho.titulo}"></span>
 	                		<div th:include="fragments/listar_participacoes :: listar-clean('Autor(es):', ${trabalho.autoresDoTrabalho})"></div>
 	                		<div th:include="fragments/listar_participacoes :: listar-clean('Revisor(es):', ${trabalho.revisores})"></div>
+	                		<a  th:href= "@{|/autor/file?path=${trabalho.path}|}" class="right confirmar modal-trigger">Ver Arquivo</a>
 	                   	</div>
 	                   	<div class="card-action">
 	              			<a th:id="${trabalho.id}" th:attr="href='#modalRevisor' + ${count.index}" onclick="trabalho_atual(this)" class="btn white-text waves-effect waves-light blue-grey modal-trigger">Atribuir Revisor</a>
