Tornando o botão de fechar fixo no footer do modal

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
@@ -43,7 +43,7 @@
 	            
 	            
 	            
-	      	<div th:attr="id='modalRevisor' + ${count.index}" class="modal" data-keyboard="">
+	      	<div th:attr="id='modalRevisor' + ${count.index}" class="modal modal-fixed-footer" data-keyboard="">
 	      		<div class="modal-content">
 	      			<h4 class="block" th:text="${trabalho.titulo}">Nome do Trabalho</h4>
 	      			<p><b>Autor(es):</b></p>
