--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -25,7 +25,7 @@
           <h4 th:if="${#lists.isEmpty(eventosAtivos)}">Não há eventos ativos</h4>
       </div>
         
-        <div class="row holder center"></div>
+        <div th:unless="${#lists.isEmpty(eventosAtivos)}" class="row holder center"></div>
         <div class="row" id="itemContainer">
            <div th:each="evento : ${eventosAtivos}" class="col m6 s12">
               <div class="card">
@@ -64,17 +64,8 @@
         	  </div>
              </div>
         </div>
-        <div class="row holder center"></div>
-<!--         
-                <div class="row col s12 center">
-                  <ul class="pagination">
-                    <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
-                    <li class="active"><a href="#">1</a></li>
-                    <li class="waves-effect"><a href="#">2</a></li>
-                    <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
-                  </ul>
-                </div>
- -->               
+        <div th:unless="${#lists.isEmpty(eventosAtivos)}" class="row holder center"></div>
+         
       </div>
     <div th:include="fragments/footer :: footer"></div>
     <script type="text/javascript" th:src="@{/js/jPages.min.js}"></script>
