--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
@@ -4,12 +4,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Constest - Controle de Eventos de Submissão</title>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 		<!-- CSS  -->
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 		<link th:href="@{/webjars/materialize/0.97.6/dist/css/materialize.min.css}" type="text/css" rel="stylesheet" media="screen,projection" />
 		<link th:href="@{/webjars/font-awesome/4.6.3/css/font-awesome.min.css}" type="text/css" rel="stylesheet" />
 		<link th:href="@{/css/style.css}" type="text/css" rel="stylesheet" media="screen,projection" />
+		<!-- recursos para paginação  -->
+		<link th:href="@{/css/jPages.css}" type="text/css" rel="stylesheet" media="screen,projection" />
   </head>
   <body>
     <div th:include="fragments/header :: header"></div>
@@ -40,7 +41,9 @@
       </div>
       <div class="row">
         <h2>Lista de Eventos Inativos</h2>
-        
+      </div>
+      <div th:if="${#lists.size(eventosQueOrganizo) > 6}" class="row holder center"></div>
+      <div class="row" id="itemContainer">
         <div th:each="eventoOrganizo : ${eventosQueOrganizo}" class="col m6 s12">
           <div class="card">
               
@@ -69,19 +72,11 @@
         
           <h4 th:if="${!existeEventos}">Não há eventos Inativos</h4>
       </div>
-        
-<!--         
-                <div class="row col s12 center">
-                  <ul class="pagination">
-                    <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
-                    <li class="active"><a href="#">1</a></li>
-                    <li class="waves-effect"><a href="#">2</a></li>
-                    <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
-                  </ul>
-                </div>
- -->
+      <div th:if="${#lists.size(eventosQueOrganizo) > 6}" class="row holder center"></div>
+
    </div>
     <div th:include="fragments/footer :: footer"></div>
+    <script type="text/javascript" th:src="@{/js/jPages.min.js}"></script>
     <script type="text/javascript">
       $(document).ready(function(){
         //Inicialização dos elementos no JS
@@ -167,6 +162,11 @@
           configurarCalendario(calendarioRevisaoInicial, calendarioRevisaoFinal);
         });
         
+      	//Inicialização do Jpages para realizar a paginação
+        $("div.holder").jPages({
+        	containerID : "itemContainer",
+        	perPage: 6 //Quantidade de elementos exibidos por página.
+        });
       });
     </script>
   </body>
