--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -9,16 +9,13 @@
       <div th:include="fragments/organizador_menu_navegacao :: organizador_menu_navegacao"></div>
       <div class="row">
         <h2>Lista de Eventos Ativos</h2>
-        
         <h4 th:if="${#lists.isEmpty(eventosAtivos)}">Não há eventos ativos</h4>
-           
-        
         <div class="row">
            <div th:each="evento : ${eventosAtivos}" class="col m6 s12">
               <div class="card">
                 <div class="card-content">
 	              <span class="card-title" th:text="${evento.nome}" ></span>
-		<div th:include="fragments/listar_participacoes :: listar('Organizador(es):', ${evento.organizadores})"></div>
+				  <div th:include="fragments/listar_participacoes :: listar('Organizador(es):', ${evento.organizadores})"></div>
 	              <p th:text="|Visibilidade: ${evento.visibilidade.visibilidade}|"></p>
                 </div>
                 <div class="card-action">
@@ -62,6 +59,7 @@
                   </ul>
                 </div>
       </div>
+    </div>
     <div th:include="fragments/footer :: footer"></div>   
   </body>
 </html>
