- criado página html para mostrar os organizadores para gerar os certificados - criado metodo get e post para gerar o certificado do organizador

--- a/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
@@ -11,11 +11,11 @@
 	       	<a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
 	       
 	       <!-- Dropdown Structure -->
-			  <ul th:if="${evento}" id='dropdown1' class='dropdown-content'>
-			    <li><a href="#!">Certificados para Organização</a></li>
-			    <li><a href="#!">Certificados para Revisores</a></li>
-			    <li><a th:href="@{|/eventoOrganizador/gerarCertificadosTrabalho/${evento.id}|}">Certificados para Trabalhos</a></li>
-			  </ul>
+			<ul th:if="${evento}" id='dropdown1' class='dropdown-content'>
+			  <li><a th:href="@{|/eventoOrganizador/gerarCertificadosOrganizador/${evento.id}|}">Certificados para Organização</a></li>
+			  <li><a href="#!">Certificados para Revisores</a></li>
+			  <li><a th:href="@{|/eventoOrganizador/gerarCertificadosTrabalho/${evento.id}|}">Certificados para Trabalhos</a></li>
+			</ul>
 	       	<!-- Dropdown Trigger -->
  			<a th:if="${evento}" class='dropdown-button' href='#' data-activates='dropdown1'>Certificados</a>
  			
