Troca do menu-navegação pag convidar por email

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_convidar_pessoas.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_convidar_pessoas.html
@@ -24,7 +24,8 @@
       </div>
     </nav>
     <div class="container page"><br/>
-      <div class="row opcoes"><a href="org_eventos_ativos.html">Eventos Ativos</a><a href="org_eventos_inativos.html">Eventos Inativos</a><a href="org_revisores.html">Revisores</a><a href="org_trilhas.html">Trilhas</a></div>
+      <div th:include="fragments/organizador_menu_navegacao :: organizador_menu_navegacao"></div>
+
       <div class="row">
         
         <h2>Convidar Pessoa</h2>
