A comissao agora pode ver as observacoes dos revisores dos trabalhos do evento.

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_consideracoes_dos_revisores.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_consideracoes_dos_revisores.html
@@ -25,7 +25,7 @@
 	                <b>Revisor:</b> <span th:text="${revisao.revisor.nome}"></span>
 	                <br/>
 	                <b>Autor:</b> <span>s</span>
-	                <p th:text="${revisao.conteudo}">	                
+	                <p th:text="${revisao.observacoes}">	                
 	                </p>
 	              </div>
 	            </div>
