--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
@@ -31,8 +31,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="row" th:case="false" th:each="trabalho : ${trabalhos}">
-					<div class="card horizontal">
+				<div class="row" th:case="false" >
+					<div class="card horizontal" th:each="trabalho : ${trabalhos}">
 						<div class="card-stacked">
 							<div class="card-content">
 								<span class="card-title" th:text="${trabalho.titulo}"></span>
