--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -89,7 +89,8 @@
                   <br /><br />
                 </div>
                 <div class="card-action" th:if="${organizaEvento}">
-                  <a th:href="@{'/eventoOrganizador/evento/'+ ${evento.id} +'/revisoes'}" class="btn white-text waves-effect waves-light blue-grey">Ver todas</a>
+                  <a th:if="${comentarios}" th:href="@{'/eventoOrganizador/evento/'+ ${evento.id} +'/revisoes'}" class="btn white-text waves-effect waves-light blue-grey">Ver todas</a>
+                  <a th:unless="${comentarios} or ${evento.isPeriodoFinal()}" class="btn disabled white-text waves-effect waves-light blue-grey">Ver todas</a>
                 </div>
               </div>
             </div>
