--- a/aplicacao/contest/src/main/resources/templates/autor/autor_index.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_index.html
@@ -111,17 +111,26 @@
 				var filtro = e;
 				var componente = componente;
 				
-				var nomeFiltro = filtro.value.toLowerCase();
+				var nomeFiltro = removerAcentos(filtro.value.toLowerCase());
 				var elemento = document.getElementsByClassName(componente);
 				
 				 for (var i = elemento.length - 1; i >=0; i--){
-					var conteudoBusca = elemento[i].children[0].firstElementChild.innerHTML;
+					var conteudoBusca = removerAcentos(elemento[i].children[0].firstElementChild.innerHTML);
 					var corresponde = conteudoBusca.toLowerCase().indexOf(nomeFiltro) >= 0;
 					elemento[i].style.display = corresponde ? '' : 'none';
 			    } 
 				
 			};
 		});
+		
+		/**
+		 * Remove acentos de strings
+		 * @param  {String} string acentuada
+		 * @return {String} string sem acento
+		 */
+		var map={"â":"a","Â":"A","à":"a","À":"A","á":"a","Á":"A","ã":"a","Ã":"A","ê":"e","Ê":"E","è":"e","È":"E","é":"e","É":"E","î":"i","Î":"I","ì":"i","Ì":"I","í":"i","Í":"I","õ":"o","Õ":"O","ô":"o","Ô":"O","ò":"o","Ò":"O","ó":"o","Ó":"O","ü":"u","Ü":"U","û":"u","Û":"U","ú":"u","Ú":"U","ù":"u","Ù":"U","ç":"c","Ç":"C"};
+
+		function removerAcentos(s){ return s.replace(/[\W\[\] ]/g,function(a){return map[a]||a}) };
 	</script>
 </body>
 </html>
