--- a/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
@@ -13,7 +13,7 @@
 	       <!-- Dropdown Structure -->
 			<ul th:if="${evento}" id='dropdown1' class='dropdown-content'>
 			  <li><a th:href="@{|/eventoOrganizador/gerarCertificadosOrganizador/${evento.id}|}">Certificados para Organização</a></li>
-			  <li><a href="#!">Certificados para Revisores</a></li>
+			  <li><a th:href="@{|/eventoOrganizador/gerarCertificadosRevisores/${evento.id}|}">Certificados para Revisores</a></li>
 			  <li><a th:href="@{|/eventoOrganizador/gerarCertificadosTrabalho/${evento.id}|}">Certificados para Trabalhos</a></li>
 			</ul>
 	       	<!-- Dropdown Trigger -->
