--- a/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
@@ -50,7 +50,7 @@
           </div>
         </div>
 
-       <div th:unless="${#lists.isEmpty(eventosAtivos)}" class="row holder center"></div>
+       <div th:unless="${#lists.isEmpty(eventos)}" class="row holder center"></div>
     </div>
    	<div th:include="fragments/footer :: footer"></div>
    	<script type="text/javascript" th:src="@{/js/modernizr.js}"></script>
