Validação para saber se o autor logado é autor do trabalho revisado.

--- a/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_listar_trabalhos.html
@@ -84,7 +84,7 @@
 	                  	<br/>
 	                    <a th:if="${trabalho.evento.isPeriodoInicial()} or ${trabalho.evento.isPeriodoFinal()}" th:attr="href='#reenviar' + ${trabalho.id}" class="teal-text confirmar modal-trigger">Reenviar</a>
 	                    <a th:href= "@{|/autor/file?path=${trabalho.path}|}" class="teal-text confirmar modal-trigger">Ver envio</a>
-						<a th:href="@{|/autor/revisao?trabalhoId=${trabalho.id}|}" class="teal-text confirmar modal-trigger">Ver Revisao</a>
+						<a th:href="@{|/autor/revisao?trabalho=${trabalho.id}|}" class="teal-text confirmar modal-trigger">Ver Revisao</a>
 						<a th:if="${trabalho.evento.isPeriodoInicial()}" th:attr="href='#modal' + ${trabalho.id}" class="red-text confirmar modal-trigger">Excluir</a>
 	                  </div>
 	                </div>
