Adicionado ordenação as trilhas do evento.
Remoção de htmls comentados e redundancia no controller do organizador.

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_trilhas.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_trilhas.html
@@ -34,7 +34,7 @@
                   </tr>
                 </thead>
                 <tbody >             
-                  <tr th:each="itemTrilha : ${trilhas}">
+                  <tr th:each="itemTrilha : ${evento.trilhas}">
                     <td><p class="center" th:text="${itemTrilha.nome}"></p></td>
                     <td> <p class="center" th:text="${itemTrilha.numeroTrabalhos}"></p></td>
                     <td> <a th:href="@{'/eventoOrganizador/trilha/' + ${itemTrilha.id} +'/'+ ${evento.id}}">Ver Trilha</a></td>
