--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -12,6 +12,10 @@
         	<span class="white-text" th:text= "${organizadorError}"></span>
         	<i class="material-icons">close</i>
       </div>
+       <div th:if="${organizadorSucess}" class="chip green darken-1">
+        	<span class="white-text" th:text= "${organizadorSucess}"></span>
+        	<i class="material-icons">close</i>
+      </div>
         <h2>Detalhes do Evento: 
         	<span class="card-title" th:text="${evento.nome}" ></span>
         </h2>
